--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@anatolyk/react-native-week-view": "^1.0.8",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "@mobiscroll/react-lite": "^4.10.9",
+    "@syncfusion/ej2-react-schedule": "^19.4.52",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "dayz": "^2.9.1",
+    "kalend": "^0.9.5",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.9",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
