--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.9",
     "react-dom": "^17.0.2",
+    "react-google-calendar-api": "^1.5.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
